<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.click_labs.click_labsworkflow.fragment.AddTimesheetFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/drop_down_icon"
            android:focusable="false"
            android:hint="@string/text_select_project"
            android:longClickable="false"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_sales_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/drop_down_icon"
            android:focusable="false"
            android:hint="@string/text_select_sales_title"
            android:longClickable="false"
            app:met_floatingLabel="highlight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight=".5"
                android:drawableEnd="@drawable/drop_down_icon"
                android:focusable="false"
                android:hint="@string/text_hours"
                android:longClickable="false"
                app:met_floatingLabel="highlight" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight=".5"
                android:drawableEnd="@drawable/drop_down_icon"
                android:focusable="false"
                android:hint="@string/text_minutes"
                android:longClickable="false"
                app:met_floatingLabel="highlight" />

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_task_accomplished"
            app:met_floatingLabel="highlight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:layout_weight=".5"
                android:background="@drawable/shape_button_delete"
                android:text="@string/text_cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:layout_weight=".5"
                android:background="@drawable/shape_button"
                android:text="@string/text_save"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>
