<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.click_labs.click_labsworkflow.activity.ChangePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_old_password"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_new_password"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_confirm_new_password"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_button"
            android:text="@string/text_save"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>
