<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.click_labs.click_labsworkflow.activity.AddTimesheetActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_calendar"
            android:focusable="false"
            android:hint="@string/text_select_date"
            app:met_floatingLabel="highlight" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button"
            android:text="@string/text_add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button"
            android:text="@string/text_save"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
