<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.click_labs.click_labsworkflow.fragment.TimesheetDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_timesheet_details"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/font_large" />

            <ImageView
                android:id="@+id/iv_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="2dp"
                android:src="@drawable/ic_close"/>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/text_project_name"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="end"
                android:text="@string/text_sales_order_title"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <TextView
                android:id="@+id/tv_project_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/text_date"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="end"
                android:text="@string/text_hours_spent"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <TextView
                android:id="@+id/tv_hours_spent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_task_accomplished"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/font_large" />

            <TextView
                android:id="@+id/tv_work_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:layout_weight=".5"
                android:background="@drawable/shape_button_delete"
                android:text="@string/text_delete"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:layout_weight=".5"
                android:background="@drawable/shape_button"
                android:text="@string/text_edit"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>
